# bitwarden-csi-provider

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/bitwarden-csi-core/: Cargo.toml
crates/bitwarden-csi-core/src/: bitwarden.rs  provider.rs  types.rs
crates/bitwarden-csi-proto/: Cargo.toml  build.rs
crates/bitwarden-csi-provider/: Cargo.toml
crates/bitwarden-csi-provider/src/: config.rs  health.rs  main.rs  server.rs
crates/bitwarden-csi-provider/tests/: integration.rs
crates/bws-csi-core/: Cargo.toml
crates/bws-csi-core/src/: bitwarden.rs  error.rs  lib.rs  provider.rs  secret_map.rs
crates/bws-csi-proto/: Cargo.toml
crates/bws-csi-proto/src/: lib.rs
crates/bws-csi-provider/: Cargo.toml
crates/bws-csi-provider/src/: config.rs  health.rs  main.rs  server.rs
crates/bws-csi-provider/tests/: integration.rs
crates/bws-csi-provider/tests/fake_server/: mod.rs
deploy/helm/bitwarden-csi-provider/: Chart.yaml  values.yaml
deploy/helm/bitwarden-csi-provider/templates/: serviceaccount.yaml
deploy/helm/bws-csi-provider/: Chart.yaml  values.yaml
deploy/helm/bws-csi-provider/templates/: daemonset.yaml
h2-patched/src/: server.rs
proto/provider/v1alpha1/: service.proto
