[workspace]
members = [
    "crates/bitwarden-csi-proto",
    "crates/bitwarden-csi-core",
    "crates/bitwarden-csi-provider",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/kvncrw/bitwarden-csi-provider"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
bitwarden = { version = "2.0", features = ["secrets"] }

[patch.crates-io]
# Patch h2 to accept malformed :authority headers from gRPC over Unix sockets.
# The Kubernetes CSI driver's Go gRPC client sets :authority to the raw socket
# path which contains '/' characters invalid per RFC 3986.
# See: https://github.com/hyperium/h2/pull/487 (open since 2020, unmerged)
h2 = { git = "https://github.com/kvncrw/h2.git", branch = "master" }
