[package]
name = "bitwarden-csi-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bitwarden-csi-provider"
path = "src/main.rs"

[dependencies]
bitwarden-csi-proto = { path = "../bitwarden-csi-proto" }
bitwarden-csi-core = { path = "../bitwarden-csi-core" }
async-trait.workspace = true
clap.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
tower = "0.5"
hyper-util = "0.1"
