[package]
name = "bws-csi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
bitwarden.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
